--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,19 @@
 @import "tailwindcss";
+
+@keyframes pulse-slow {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.3;
+  }
+}
+
+.animate-pulse-slow {
+  animation: pulse-slow 6s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+body {
+  color: white;
+}
